--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,12 @@ li{
   list-style: none;
 }
 
+.UserInfo {
+  width: 20%;
+  margin: auto;
+  margin-top: 100px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
